<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginTop="80dp"
    app:backgroundTint="@color/pink"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_keterangan"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editKeterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_keterangan"
            android:inputType="text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_nominal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nominal"
            android:inputType="number" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_tipe"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/groupTipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioPemasukan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipe_pemasukan" />

            <RadioButton
                android:id="@+id/radioPengeluaran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/tipe_pengeluaran" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_kategori"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerKategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:entries="@array/daftar_kategori" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_tanggal"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPilihTanggal"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:backgroundTint="@color/pink"
            android:textColor="@color/white"
            android:text="@string/tombol_pilih_tanggal" />

        <TextView
            android:id="@+id/textTanggalDipilih"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tombol_simpan"
            app:backgroundTint="@color/pink"
            />

    </LinearLayout>
</ScrollView>